--- a/tensquare_parent/tensquare_article/src/main/resources/application.yml
+++ b/tensquare_parent/tensquare_article/src/main/resources/application.yml
@@ -13,4 +13,8 @@ spring:
     show-sql: true
   redis:
     host: 192.168.192.130
+  data:
+    mongodb:
+      host: 192.168.192.130
+      database: recruitdb
 
