--- a/tensquare_parent/tensquare_article/src/main/resources/application.yml
+++ b/tensquare_parent/tensquare_article/src/main/resources/application.yml
@@ -20,4 +20,10 @@ spring:
 jwt:
   config:
     key: eknaij
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:6868/eureka
+  instance:
+    prefer-ip-address: true
 
