--- a/tensquare_parent/tensquare_spit/src/main/resources/application.yml
+++ b/tensquare_parent/tensquare_spit/src/main/resources/application.yml
@@ -12,3 +12,9 @@ spring:
 jwt:
   config:
     key: eknaij
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:6868/eureka
+  instance:
+    prefer-ip-address: true
