--- a/tensquare_parent/pom.xml
+++ b/tensquare_parent/pom.xml
@@ -14,6 +14,16 @@
         <module>tensquare_recruit</module>
         <module>tensquare_qa</module>
         <module>tensquare_article</module>
+        <module>tensquare_eureka</module>
+        <module>tensquare_friend</module>
+        <module>tensquare_gathering</module>
+        <module>tensquare_manager</module>
+        <module>tensquare_search</module>
+        <module>tensquare_sms</module>
+        <module>tensquare_spit</module>
+        <module>tensquare_user</module>
+        <module>tensquare_web</module>
+        <module>tensquare_config</module>
     </modules>
 
 
@@ -29,7 +39,17 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
     </properties>
-
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Finchley.M9</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
